<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Életek -->
    <LinearLayout
        android:id="@+id/livesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <!-- Gép életek -->
        <LinearLayout
            android:id="@+id/livesLayoutComputer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/heart2" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/heart2" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/heart2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/computer_text"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>



        <!-- Játékos életek -->
        <LinearLayout
            android:id="@+id/livesLayoutPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/player_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/playerHeart1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/heart2"
                android:onClick="onPlayerHeartClick" />

            <ImageView
                android:id="@+id/playerHeart2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/heart2"
                android:onClick="onPlayerHeartClick" />

            <ImageView
                android:id="@+id/playerHeart3"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/heart2"
                android:onClick="onPlayerHeartClick" />

        </LinearLayout>
    </LinearLayout>

    <!-- Döntetlenek száma -->
    <TextView
        android:id="@+id/textViewDraws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=   "@string/draws_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@id/livesLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- Döntetlenek szám változó -->
    <TextView
        android:id="@+id/textViewDrawsVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/livesLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toRightOf="@+id/textViewDraws"
        android:text="0"
        android:textSize="16sp"
        android:textStyle="bold" />


    <!-- Játék elemek -->
    <TextView
        android:id="@+id/textViewPlayerChoiceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_choice_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/textViewDraws"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/imageViewPlayerChoice"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textViewPlayerChoiceLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/rock" />

    <TextView
        android:id="@+id/textViewComputerChoiceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_choice_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/imageViewPlayerChoice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/imageViewComputerChoice"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textViewComputerChoiceLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/rock" />

    <TextView
        android:id="@+id/textViewResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_message"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/imageViewComputerChoice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewResults"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/buttonRock"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="60dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/rock"
            android:onClick="onButtonClick" />

        <ImageView
            android:id="@+id/buttonPaper"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/buttonRock"
            android:onClick="onButtonClick"
            android:src="@drawable/paper" />

        <ImageView
            android:id="@+id/buttonScissors"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_toEndOf="@id/buttonPaper"
            android:onClick="onButtonClick"
            android:src="@drawable/s" />

    </RelativeLayout>

</RelativeLayout>